Support thick-client uploads in server and Go client (#1670)
* Initial server implementation of split-uploads for thick client

* Upload from client

* [CR] "make gofmt", then restore pkg/metastore/hive/gen-go

Do *not* format generated files.

* [CR] Remove unneeded nopCloser methods and stray debug prints

* [CR] Put underlying pathnames for staging under "data" not "staging"

These pathnames remain after commit, thus become unrelated to staging.  OTOH they are always
used for data.
