# docs/assets/js/swagger.yml
@@ -142,12 +142,13 @@ definitions:
       checksum:
         type: string
         description: unique identifier of object content on backing store (typically ETag)
-      mtime:
-        type: integer
-        format: int64
       size_bytes:
         type: integer
         format: int64
+    required:
+      - staging
+      - checksum
+      - size_bytes
 
   object_stage_creation:
     type: object
@@ -2069,6 +2070,10 @@ paths:
           # created or 200 if an existing object was modified,
           # https://tools.ietf.org/html/rfc7231#section-4.3.4
           description: successfully linked
+        400:
+          description: bad request
+          schema:
+            $ref: "#/definitions/error"
         401:
           $ref: "#/responses/Unauthorized"
         404:
